Disable social share

--- a/layouts/partials/post_metadata.html
+++ b/layouts/partials/post_metadata.html
@@ -15,7 +15,7 @@
       </div>
     {{ end }}
 
-    {{ if not .Site.Params.disableSocialShare }}
+    {{ if false }}
       <div class="row social-share">
         <span class="label">{{ partial "utils/icons" "share-sharp" }}{{ i18n "shareWith" }}</span>
         {{ $tag_list := "" }}
