--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -27,7 +27,7 @@
     </ul>
     <div class="copyright">
       {{ with .Site.Params.copyright }}
-        {{ . | safeHTML }} {{ else }} &copy; {{ now.Format "2006"}}  <a rel="nofollow noopener" target="_blank" href="https://3willows.xyz/" title="Jasper Wong">&nbsp;Jasper Wong</a>
+        {{ . | safeHTML }} {{ else }} &copy; {{ now.Format "2006"}}  &nbsp;<a rel="nofollow noopener" target="_blank" href="https://3willows.xyz/" title="Jasper Wong">Jasper Wong</a>
       {{ end }}
     </div>
   </div>
